change toList() to collect(Collectors.toList());